# Object-oriented-analysis-and-design-2

./: Object-oriented-analysis-and-design-2.sln
lab01/: README.md
lab01/PhotoEditorApp/: App.xaml  App.xaml.cs  Converters.cs  MainWindow.xaml  MainWindow.xaml.cs
lab01/PhotoEditorApp/Logic/: NoPatternProcessor.cs  PatternProcessor.cs
lab01/PhotoEditorApp/Models/: PhotoModels.cs
lab02/: CMakeLists.txt  MyTubeNoPattern.js  MyTubeNoPattern.wasm  MyTubeProxy.js  MyTubeProxy.wasm  README.md  index.html
lab02/src/: IVideo.h  RealVideo.cpp  RealVideo.h  VideoProxy.cpp  VideoProxy.h  YouTubeApp.cpp  YouTubeApp.h  YouTubeAppNoPattern.cpp  YouTubeAppNoPattern.h  main.cpp  mainNoPattern.cpp
lab03/: README.md  exporters.py  main.py  no_pattern_exporter.py
lab04/: README.md  alchemy.db
lab04/game/: good_potion_web.db  pom.xml
lab04/game/src/main/java/com/alchemy/game/: AlchemyApplication.java  GameController.java  PotionFormula.java
lab04/game/src/main/resources/static/: index.html
lab04/game/src/test/java/com/alchemy/game/: GameApplicationTests.java
